//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  name String [not null]
  password String [not null]
  role String [not null, default: 'MEMBER']
  isFirstLogin Boolean [not null, default: true]
  emailVerified Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  photo String
  Routes Routes [not null]
  Vehicle Vehicle [not null]
}

Table Vehicle {
  id Int [pk, increment]
  name String [not null]
  signSerial String [unique, not null]
  responsible User [not null]
  responsibleId String [not null]
  type String [not null]
  Routes Routes [not null]
}

Table Routes {
  id Int [pk, increment]
  name String [unique, not null]
  geofencinginfos String [not null]
  startAddress String [not null]
  finishAddress String [not null]
  creatorid String [not null]
  vehicle Vehicle [not null]
  vehicleId Int [not null]
  user User [not null]
  userId String [not null]
  status String [not null, default: 'WAITING']
  Alerts Alerts [not null]
}

Table Alerts {
  id Int [pk, increment]
  location String [not null]
  route Routes [not null]
  routeId Int [not null]
}

Ref: Vehicle.responsibleId > User.id

Ref: Routes.vehicleId > Vehicle.id

Ref: Routes.userId > User.id

Ref: Alerts.routeId > Routes.id